tests/tmytests/good/danieltest.lat
class tree {
    int x;
    tree left;
    tree right;
}

tree init(int x) {
    tree t = new tree;
    t.x = x;
    t.left = (tree)null;
    t.right = (tree)null;
    return t;
}

tree create_tree(int n, int d) {
    if (d == 0) return (tree)null;
    tree t = init(n);
    t.left = create_tree(n-1, d-1);
    t.right = create_tree(n+1, d-1);
    return t;
}

void print_tree(tree t) {
    if (t == (tree)null) return;
    print_tree(t.left);
    printInt(t.x);
    print_tree(t.right);
}

int main() {
    tree t = create_tree(2137, 3);
    print_tree(t);
    printInt(t.left.x);
    printInt(t.right.x);
    return 0;
}
