tests/tmytests/bad/method_redefinition.lat
class Test {
    int field1;
    int field2;

    int method1() {
        return 1;
    }

    int method2() {
        return 2;
    }

    int method2() {
        return 3;
    }
}

int main() {
    return 0;
}